[UPDATE] copy to clipboard button

--- a/DemoFly/popup.html
+++ b/DemoFly/popup.html
@@ -13,6 +13,8 @@
               <h4>for</h4>
               <h4 id="odoo_version"></h4>
               Click to Initiate Demo</a>
+            <textarea id="txt_copy" style="width:1px;height:1px"></textarea>
+            <button class="js-textareacopybtn" style="cursor:pointer">Copy to Clipboard</button>
           </div>
           <div class="wk_demomenu" id="capture-menu1">
           <h3>Using this extension, you can check demo of Odoo Addons:</h3>
