--- a/DemoFly/popup.html
+++ b/DemoFly/popup.html
@@ -14,7 +14,7 @@
               <h4 id="odoo_version"></h4>
               Click to Initiate Demo</a>
             <textarea id="txt_copy" style="width:1px;height:1px"></textarea>
-            <button class="js-textareacopybtn" style="cursor:pointer">Copy to Clipboard</button>
+            <button class="js-textareacopybtn" style="cursor:pointer">Copy Demo Link</button>
           </div>
           <div class="wk_demomenu" id="capture-menu1">
           <h3>Using this extension, you can check demo of Odoo Addons:</h3>
