[UPDATE] improved css

--- a/DemoFly/popup.html
+++ b/DemoFly/popup.html
@@ -7,14 +7,15 @@
   </head>
   <body>
       <div id="wk_main">
-          <div class="wk_demomenu" id="capture-menu" style="display:none">
+          <div class="wk_demomenu" id="capture-menu" style="display:none;">
             <a id="10" target="_blank">
-              <h3 id="module_name"><b></b></h3>
+            <textarea id="txt_copy" style="width:0px;height:0px;border: none;
+    display: block;"></textarea>
+            <input type="image" src="./css/icon-copy.png" class="js-textareacopybtn" id="btn_copy"/>
+              <h3 id="module_name" style="margin-top: 0px;"><b></b></h3>
               <h4>for</h4>
               <h4 id="odoo_version"></h4>
-              Click to Initiate Demo</a>
-            <textarea id="txt_copy" style="width:1px;height:1px"></textarea>
-            <button class="js-textareacopybtn" style="cursor:pointer">Copy Demo Link</button>
+              Click to Initiate Demo</a>            
           </div>
           <div class="wk_demomenu" id="capture-menu1">
           <h3>Using this extension, you can check demo of Odoo Addons:</h3>
